修复GA4追踪，修复Gitalk Token, 去除profile旋转效果

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5848,8 +5848,8 @@ body.no-sidebar .sidebar {
 }
 
 #avatar {
-  width: 64px;
-  height: 64px;
+  width: 100%;
+  /* height: 64px; */
   display: inline-block;
 }
 
